<resources>
    <string name="app_name">Event</string>
    <string name="eventTitle">AGES Event</string>
    <string name="HomeActivityTitle">CSBC 2016</string>
    <string name="HomeActivitySubTitle">XXXVI Congresso da Sociedade Brasileira de Computação</string>
    <string name="ActivityEvento1Title">43º SEMISH - Seminário Integrado de Software e Hardware</string>
    <string name="ActivityReuniaoTitle">Reuniões e Foruns</string>
    <string name="homeDate">Eventos</string>
    <string name="homeHora">Horas</string>
    <string name="homeSala">Salas</string>
    <string name="txtEvento_1"></string>

    <string name="Reuniao">Reuniões</string>
    <string name="Reuniao_1">Reunião Comissão de Educação</string>

    <string name="Evento_1">SEMSH</string>
    <string name="Evento_2">CTD</string>
    <string name="Evento_3">JAI</string>
    <string name="Evento_4">WEI</string>
    <string name="Evento_5">WIM</string>
    <string name="Evento_6">ETC</string>
    <string name="Evento_7">WCAMA</string>
    <string name="Evento_8">WPerformance</string>
    <string name="Evento_9">WIT</string>
    <string name="Evento_10">SBSC</string>
    <string name="Evento_11">BrasNAM</string>
    <string name="Evento_12">Computec</string>
    <string name="Evento_13">WCN Cloud.Br</string>
    <string name="Evento_14">Workshop Pre-IETF</string>
    <string name="Evento_15">DesafIE!</string>
    <string name="Evento_16">BreSci</string>
    <string name="Evento_17">SBCUP</string>
    <string name="Evento_18">PET WEI</string>
    <string name="Evento_19">ENCompIF</string>
    <string name="Evento_20">Failcon Brazil</string>

    <string name="title_activity_feedback">FeedbackActivity</string>

    <string name="infoAGES">Copyright AGES 2016|by AGES Team</string>
    <string name="title_activity_activity__reuniao">Reuniões</string>
    <string name="title_activity_activityist_news">News</string>


</resources>
