<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/app_background"
    android:orientation="vertical">

    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@+id/header"
        android:layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/evento_btn_1"
                    style="@style/Evento"
                    android:background="@color/fundoEvento1"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_1"
                    android:textColor="@color/colorIce" />

                <Button
                    android:id="@+id/evento_btn_2"
                    style="@style/Evento"
                    android:background="@color/fundoEvento2"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_2"
                    android:textColor="@color/colorIce" />

                <Button
                    android:id="@+id/evento_btn_3"
                    style="@style/Evento"
                    android:background="@color/fundoEvento3"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_3"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/evento_btn_4"
                    style="@style/Evento"
                    android:background="@color/fundoEvento4"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_4"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/evento_btn_5"
                    style="@style/Evento"
                    android:background="@color/fundoEvento5"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_5"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/evento_btn_6"
                    style="@style/Evento"
                    android:background="@color/fundoEvento6"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_6"
                    android:textColor="@color/colorIce" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/main_btn_7"
                    style="@style/Evento"
                    android:background="@color/fundoEvento7"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_7"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/main_btn_8"
                    style="@style/Evento"
                    android:background="@color/fundoEvento8"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_8"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/main_btn_9"
                    style="@style/Evento"
                    android:background="@color/fundoEvento9"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_9" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/main_btn_10"
                    style="@style/Evento"
                    android:background="@color/fundoEvento10"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_10" />

                <Button
                    android:id="@+id/main_btn_11"
                    style="@style/Evento"
                    android:background="@color/fundoEvento11"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_11" />

                <Button
                    android:id="@+id/main_btn_12"
                    style="@style/Evento"
                    android:background="@color/fundoEvento12"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/main_btn_13"
                    style="@style/Evento"
                    android:background="@color/fundoEvento13"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_13" />

                <Button
                    android:id="@+id/main_btn_14"
                    style="@style/Evento"
                    android:background="@color/fundoEvento14"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_14"
                    android:textColor="@color/colorPrimaryDark"/>

                <Button
                    android:id="@+id/main_btn_15"
                    style="@style/Evento"
                    android:background="@color/fundoEvento15"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_15"
                    android:textColor="@color/colorIce"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/main_btn_16"
                    style="@style/Evento"
                    android:background="@color/fundoEvento16"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_16" />

                <Button
                    android:id="@+id/main_btn_17"
                    style="@style/Evento"
                    android:background="@color/fundoEvento17"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_17" />

                <Button
                    android:id="@+id/main_btn_18"
                    style="@style/Evento"
                    android:background="@color/fundoEvento18"
                    android:onClick="onButtonClicker"
                    android:textColor="@color/colorIce"
                    android:text="@string/Evento_18" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/main_btn_19"
                    style="@style/Evento"
                    android:background="@color/fundoEvento19"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_19" />

                <Button
                    android:id="@+id/main_btn_20"
                    style="@style/Evento"
                    android:background="@color/fundoEvento20"
                    android:onClick="onButtonClicker"
                    android:text="@string/Evento_20" />
                <Button
                    android:id="@+id/reuniao_btn"
                    style="@style/Evento"
                    android:background="@color/fundoEvento14"
                    android:onClick="onButtonClicker"
                    android:text="@string/Reuniao"
                    android:textColor="@color/colorPrimaryDark" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>