<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@+id/header"
        android:layout="@layout/header" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/txtEvento_1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/borda_1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_btn_homeDate"
            style="@style/HomeButton"
            android:drawableTop="@drawable/date_64"
            android:onClick="onButtonClicker"
            android:text="@string/homeDate" />

        <Button
            android:id="@+id/main_btn_froyo"
            style="@style/HomeButton"
            android:drawableTop="@drawable/time_64"
            android:onClick="onButtonClicker"
            android:text="@string/homeHora" />

        <Button
            android:id="@+id/main_btn_gingerbread"
            style="@style/HomeButton"
            android:drawableTop="@drawable/door_64"
            android:onClick="onButtonClicker"
            android:text="@string/homeSala" />

    </LinearLayout>

</LinearLayout>