<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ages.event.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_csbc" />

    <TextView
        style="@style/heading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HomeActivityTitle" />

    <TextView
        style="@style/sub_heading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HomeActivitySubTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/borda_1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_btn_homeDate"
            style="@style/HomeButton"
            android:drawableTop="@drawable/date_64"
            android:onClick="onButtonClicker"
            android:text="@string/homeDate" />

        <Button
            android:id="@+id/main_btn_froyo"
            style="@style/HomeButton"
            android:drawableTop="@drawable/time_64"
            android:onClick="onButtonClicker"
            android:text="@string/homeHora" />

        <Button
            android:id="@+id/main_btn_gingerbread"
            style="@style/HomeButton"
            android:drawableTop="@drawable/door_64"
            android:onClick="onButtonClicker"
            android:text="@string/homeSala" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_weight="5"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Noticias"
            android:textSize="24dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>

    <include layout="@layout/foot" />
</LinearLayout>
